Added list view and relevant activities and created food entry class

--- a/HealthyHappyTummy2/app/src/main/AndroidManifest.xml
+++ b/HealthyHappyTummy2/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".AddEntryActivity"
             android:label="Add Entry"
             ></activity>
+        <activity
+            android:name=".ViewEntryActivity"
+            android:label="View Entry Activity"
+            ></activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
