--- a/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
+++ b/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
@@ -6,10 +6,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
 
-     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-
-     <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -35,17 +34,23 @@
         <activity
             android:name=".Controller.MainPageActivity"
             android:label="@string/title_activity_main_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+        <activity android:name=".Controller.AddEntryActivity" />
+        <activity
+            android:name=".Controller.AddEntryPageActivity"
+            android:label="@string/title_activity_add_entry_page"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-         <provider
-         android:name="android.support.v4.content.FileProvider"
-         android:authorities="${applicationId}.provider"
-         android:exported="false"
-         android:grantUriPermissions="true">
-         <meta-data
-         android:name="android.support.FILE_PROVIDER_PATHS"
-         android:resource="@xml/provider_paths"/>
-         </provider>
-        <activity android:name=".Controller.AddEntryActivity"></activity>
     </application>
 
 </manifest>
