--- a/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
+++ b/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.awilkins6gatech.happyhealthytummyapp">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
+    <uses-sdk android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -78,6 +76,11 @@
         <activity
             android:name=".Controller.FeedbackActivity"
             android:label="Feedback"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".Controller.MainPageActivity"></activity>
+        <activity
+            android:name=".Controller.CalendarActivity"
+            android:label="Monthly"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".Controller.MainPageActivity"></activity>
     </application>
