First round of UI improivements

--- a/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
+++ b/HappyHealthyTummyApp/app/src/main/AndroidManifest.xml
@@ -83,6 +83,10 @@
             android:label="Monthly"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".Controller.MainPageActivity"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
